# none

./: .env.example  README.md  pyproject.toml  requirements.txt
src/: main.py  test.py
src/controllers/: password.py  password_history.py  password_type.py  user.py
src/database/: connection.py  initialization.py
src/pages/: login.py
src/utils/: crypto.py  cryptor.py  password_generator.py  validator.py
src/views/: app.py  home.py
